hphp/hack/test/typecheck/reactive/mutable_static_method2.php.exp
File "mutable_static_method2.php", line 4, characters 3-66:
__Mutable and __MaybeMutable annotations are not allowed on static methods. (Parsing[1002])
