hphp/hack/test/typecheck/reactive/mutable_static_method2.php
<?hh

class A {
  <<__Rx, __MaybeMutable>>
  public static function f(): void {
  }
}
